[package]
name = "gitoff"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
directories = "2.0"
failure = "0.1"
git2 = "0.10"
log = "0.4"
pretty_env_logger = "0.3"
rayon = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile-fast = { git = "https://github.com/FauxFaux/tempfile-fast-rs"}
url = "2"

[profile.release]
lto = true
