[package]
name = "gitgeoff"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = "2.33"
directories = "2.0"
git2 = "0.11"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
lazy_static = "1"
log = "0.4"
pretty_env_logger = "0.3"
rayon = "1"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile-fast = { git = "https://github.com/FauxFaux/tempfile-fast-rs"}
twoway = "0.2"
url = "2"

[profile.release]
lto = true
