[package]
name = "gitgeoff"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
directories = "5"
git2 = "0.19"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
lazy_static = "1"
log = "0.4"
pretty_env_logger = "0.5"
rayon = "1"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile-fast = "0.3"
twoway = "0.2"
url = "2"

[profile.release]
lto = true
